# CantinaIQ

./: .gitignore  ADA-SUBMISSION-EMAIL.md  CLAUDE.md  DEMO.md  ENRICHMENT-PLAN.md  FOR_REVIEWERS.md  Makefile  README.md  SUBMISSION-PLAN.md  VIDEO-BRIEF.md
bare/: README.md  (+3 more)
supercharged/: PRD.md  README.md  pyproject.toml
supercharged/config/: pipeline.yaml
supercharged/config/cleaning/: default.yaml
supercharged/config/enrichment/: default.yaml
supercharged/config/paths/: default.yaml
supercharged/config/reporting/: findings.yaml
supercharged/config/scoring/: default.yaml
supercharged/config/segments/: default.yaml
supercharged/config/snapshots/: 26bcea7d.yaml  4093897d.yaml  40b55259.yaml  a64a6750.yaml  b699cbf2.yaml  b7f16c72.yaml  efe65f76.yaml
supercharged/data/raw/: Vivino-export.xlsx
supercharged/data/reference/: italian_trade_imports_nl.csv  known_producers_top50.csv  macro_regions.csv  producer_aliases.csv  sustainability_cache.csv
supercharged/docs/brief/: brief.html
supercharged/reports/templates/: data-quality.md.j2  executive-summary.md.j2  methodology.md.j2
supercharged/src/cantinaiq/: anomaly.py  bias.py  bootstrap.py  cli.py  clustering.py  compare.py  pipeline.py  sensitivity.py
supercharged/tests/: conftest.py
supercharged/tests/fixtures/: build_llm_cache.py  build_sample.py  vivino_sample.xlsx
supercharged/tests/integration/: test_audit.py  test_cli_smoke.py  test_config_hash_stability.py  test_full_pipeline.py  test_hydra_loader.py  test_multirun_isolation.py  test_report_cli.py
supercharged/tests/properties/: test_bayesian_properties.py  test_value_score_properties.py
supercharged/tests/reporting/: test_charts.py  test_findings_template.py  test_methodology_template.py  test_renderer.py
supercharged/tests/schemas/: test_schemas_definition.py
(+170 files in other folders)
