[project]
name = "cantinaiq"
version = "0.1.0"
description = "Slurpini Partner Intelligence Engine — data pipeline"
requires-python = ">=3.13,<3.14"
readme = "README.md"
authors = [{ name = "Vincent Blokker" }]
dependencies = [
    "polars>=1.0,<2",
    "duckdb>=1.0,<2",
    "pandera[polars]>=0.20,<0.30",
    "hydra-core>=1.3,<2",
    "omegaconf>=2.3,<3",
    "pydantic>=2.7,<3",
    "typer>=0.12,<1",
    "jinja2>=3.1,<4",
    "matplotlib>=3.8,<4",
    "anthropic>=0.40,<1",
    "python-dotenv>=1.0,<2",
    "fastexcel>=0.10",
    "rich>=13",
]

[project.scripts]
cantinaiq = "cantinaiq.cli:app"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "hypothesis>=6.100,<7",
    "ruff>=0.6,<1",
    "mypy>=1.10,<2",
    "openpyxl>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cantinaiq"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "TID"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["hydra.*", "omegaconf.*", "matplotlib.*", "fastexcel.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: long-running tests",
    "llm: tests that would call LLM (must be cache-hit only)",
]

[tool.coverage.run]
source = ["src/cantinaiq"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
